syntax = "proto3";
package DomainServices.DocumentOnSAService.SetDocumentOnSAArchived;
option csharp_namespace = "DomainServices.DocumentOnSAService.Contracts";

import "google/protobuf/wrappers.proto";

message SetDocumentOnSAArchivedRequest {
	int32 DocumentOnSAId = 1;
}